<resources>
    <string name="app_name">PsicoAyuda</string>
    <string name="user_name">Name</string>
    <string name="user_lastname">Lastname</string>
    <string name="user_dni">DNI</string>
    <string name="verificar">verificar</string>
    <string name="enviar">Enviar</string>
    <string name="LogOut">LogOut</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up">Sign Up</string>
    <string name="asunto_txt">Asunto</string>
    <string name="descripcion_txt">Descripción</string>

</resources>
